# indexstore-db

./: .gitignore
Sources/ISDBTestSupport/: ForwardingIndexDelegate.swift
Sources/IndexStoreDB/: CMakeLists.txt  IndexDelegate.swift  IndexStoreDB.swift
Tests/IndexStoreDBTests/: IndexTests.swift  XCTestManifests.swift
include/CIndexStoreDB/: CIndexStoreDB.h
include/IndexStoreDB/Index/: IndexSystem.h  SymbolDataProvider.h  SymbolIndex.h
include/IndexStoreDB/Proto/: BufferedRequests.h
lib/: CMakeLists.txt
lib/CIndexStoreDB/: CIndexStoreDB.cpp  CMakeLists.txt
lib/Index/: IndexSystem.cpp  StoreSymbolRecord.cpp  StoreSymbolRecord.h  SymbolIndex.cpp
lib/Proto/: BufferedRequests.cpp  CMakeLists.txt  README.md  generate.sh  versions.config
